<resources>
    <string name="app_name">Forrest Watch</string>
    <!-- Registration related text -->
    <string name="register_toolbox_title">Register a new Account</string>
    <string name="til_register_firstname_hint">Enter First Name</string>
    <string name="til_lastname_hint">Enter Last Name</string>
    <string name="et_login_email_hint">Enter E-Mail Address</string>
    <string name="et_login_password_hint">Enter a Password</string>
    <string name="til_register_confirmpassword_hint">Enter Password Again</string>
    <string name="cb_register_termsandcondition_text">Accept Terms and Conditions</string>
    <string name="btn_register_register_text">Register Now</string>
    <string name="auth_current_user_logged_out">Current user logged out</string>
    <string name="tv_register_alreadyhaveanaccount_text">Already have an Account?</string>
    <string name="tv_register_login_text">Login</string>
    <string name="error_empty_email">E-Mail cannot be empty!</string>
    <string name="error_empty_passwd">Password cannot be empty!</string>
    <string name="error_empty_firstname">First name cannot be empty!</string>
    <string name="error_empty_lastname">Last name cannot be empty!</string>
    <string name="register_terms_unchecked">Please accept our Terms and Conditions</string>
    <string name="error_email_or_password_registration">Invalid Email or Passwords not matching! Please review input.</string>
    <string name="registration_success">You were registered successfully!</string>
    <string name="registration_failure">Registration failed: </string>
    <!-- login related text -->
    <string name="login_success">You were successfully logged in!</string>
    <string name="login_failure">Login failed!</string>
    <string name="login_error_user_data">Error while retrieving user data!</string>
    <string name="tv_login_title_text">Welcome!</string>
    <string name="tv_login_donthaveanaccount_text">Don\'t have an account?</string>
    <string name="tv_login_register_text">Register</string>
    <string name="tv_login_forgotpassword_text">Forgot Password?</string>
    <string name="btn_login_login_text">Login</string>
    <!-- forgot password related text -->
    <string name="error_email_user_nonexistent">No User with this email address found!</string>
    <string name="forgot_password_success">A recovery email was sent to your email address!</string>
    <string name="btn_forgot_forgot">Send account recovery email</string>

    <!-- GPS related Text -->
    <string name="error_gps_not_enabled_title">GPS disabled</string>
    <string name="error_gps_not_enabled_body">Please enable GPS to use this App!</string>
    <string name="error_gps_not_enabled_confirm">Enable now</string>
    <string name="error_gps_permissions_not_granted">Permissions not granted!</string>
    <string name="hint_home_tv_name">Give the tree a name…</string>
    <string name="btn_home_save_text">Mark Tree</string>
    <string name="tv_home_go_to_list_view">Show all marked trees</string>
    <string name="home_tree_save_success">Tree saved successfully: </string>
    <string name="error_home_tree_name_empty">Please name the tree you want to mark!</string>
    <string name="tree_picture_desc">A Tree Icon</string>

    <!-- Card view Text -->
    <string name="card_view_added_by">Added by: </string>
    <string name="tree_view_delete_title">Delete Tree?</string>
    <string name="tree_view_delete_content">Are you sure you want to delete this tree?</string>
    <string name="tree_view_delete_confirm">Confirm deletion</string>
    <string name="tree_view_delete_success">Tree deleted successfully!</string>
    <string name="tree_view_delete_failure">Tree deletion failed!</string>

    <!-- Sign out-->
    <string name="tv_sign_out">Sign out</string>
    <string name="sign_out_success">Sign out successful!</string>
    <string name="no_user_signed_in">No user signed in!</string>
</resources>